pgadmin_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
  labels:
    name: pgadmin
spec:
  rules:
  - host: super-pgadmin-nathan.lab.sspcloud.fr
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: pgadmin
            port: 
              number: 80
